fix: fixed overflow issue on with carousel on chrome

--- a/css/game-info.css
+++ b/css/game-info.css
@@ -1,1 +1,1 @@
-.game-info{height:100px;width:175px}.game-info p{margin-bottom:10px}.game-info__score{margin:0 5px 0 10px}
+.game-info{height:108px;width:175px}.game-info p{margin-bottom:10px}.game-info__score{margin:0 5px 0 10px}
