--- a/src/css/game-info.css
+++ b/src/css/game-info.css
@@ -1,5 +1,5 @@
 .game-info {
-    height: 100px;
+    height: 108px;
     width: 175px;
 }
 
